--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,7 +4,10 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (max-width : 1200px)
-	/**/
+	.main-mnu
+		display: none
+	.phone
+		padding-right: 65px
 
 
 /* Medium Devices, Desktops */
@@ -39,7 +42,20 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
-	/**/
+	.logo
+		img
+			width: 80px
+
+	.phone-wpap	
+		.phone
+			font-size: em(18px)
+			line-height: 34px
+			padding-right: 50px
+		.toggle-mnu
+			line-height: 34px
+			width: 34px
+			height: 34px	
+
 
 
 /* Custom, iPhone Retina */
