--- a/sass/header.sass
+++ b/sass/header.sass
@@ -17,9 +17,8 @@ body
 	display: none
 
 a, a:hover, a:focus, a:active
+	text-decoration: underline
 	color: $main-color
-	text-decoration:underline
-	color: $headers-color	
 
 .headers
 	font-famyly: "PFCentroSlabProMedium", $helvetica
@@ -31,7 +30,6 @@ h1, h2, h3, h4, h5, h6
 
 h1
 	font-size: em(48px)
-	text-transform: none
 
 h2
 	font-size: em(30px)
@@ -42,5 +40,84 @@ h2
 b, strong
 	font-famyly: "RalewayBold", $helvetica
 
-			
+.before
+	content: ""
+	width: 100%	
+	height: 100%
+	position: absolute
+	left: 0
+	top: 0
+
+.ulmnu
+	list-style-type: none
+	margin: 0
+	padding: 0
+	li
+		display: inline-block
+
+.main-head
+	min-height: 620px
+	background-size: cover
+	background-position: center
+	position: relative
+
+	&::before
+		@extend .before
+		background-color: #394b5f
+		opacity: .85
+	h1
+		text-tranform:none			
+
+.top-line
+	min-height: 160px
+	padding-top: 45px
+	background-image: url(/img/gradient.png)
+	background-repeat: repeat-x
+
+
+.logo
+	opacity: .95
+	img
+		width: 100px
+
+.main-mnu
+	font-size: em(15px)
+	li
+		line-height: 48px
+		padding: 0 10px
+		&.active
+			a
+				color: $main-color
+				text-decoration: underline
+		a:hover
+			color: $main-color
+			text-decoration: underline			
+	ul
+		@extend .ulmnu
+	a
+		text-decoration: none
+		color: #fff	
+
+.phone-wrap		
+	position: relative
+	.phone		
+		opacity: .9
+		color: #fff
+		font-family: "RobotoBold", $helvetica
+		font-size: em(18px)
+		line-height: 48px
+		text-align: right
+		white-space: nowrap
+	.toggle-mnu
+		display: inline-block
+		float: right
+		position: absolute
+		right: 0
+		top: 0
+		width: 48px
+		height: 48px
+		text-align: center
+		line-height: 48px
+
+
 
