--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -6,6 +6,26 @@
 @media only screen and (max-width : 1200px)
 	.main-mnu
 		display: none
+		min-width: 295px
+		float: right
+		text-align: right
+		background-color: #1c242c
+		font-size: em(20px)
+		margin-top: 10px
+		ul
+			li
+				display: block
+				line-height: 0
+				padding: 0
+			a
+				display: block
+				line-height: 48px	
+				padding: 0 20px
+				background-color: transparent
+				transition: all .5s ease
+				&:hover
+					background-color: #273646
+
 	.phone
 		padding-right: 65px
 
@@ -53,8 +73,7 @@
 			padding-right: 50px
 		.toggle-mnu
 			line-height: 34px
-			width: 34px
-			height: 34px	
+			margin-top: 15px	
 
 
 
@@ -87,5 +106,8 @@
 
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px)
-	/**/
+	.main-mnu
+		display: block !important
+		a
+			outline-style: none
 
