--- a/sass/header.sass
+++ b/sass/header.sass
@@ -48,6 +48,8 @@ b, strong
 	left: 0
 	top: 0
 
+.trans
+	transition: all .5s ease
 .ulmnu
 	list-style-type: none
 	margin: 0
@@ -114,10 +116,57 @@ b, strong
 		position: absolute
 		right: 0
 		top: 0
-		width: 48px
-		height: 48px
 		text-align: center
 		line-height: 48px
+		outline-style: none
 
+.toggle-mnu 
+	display: block
+	width: 28px
+	height: 28px
+	margin: 25px auto 0px
+	z-index: 55
+
+
+
+
+.toggle-mnu span:after,
+.toggle-mnu span:before 
+	content: ""
+	position: absolute
+	left: 0
+	top: -9px
+
+.toggle-mnu span:after
+	top: 9px
+
+.toggle-mnu span 
+	position: relative
+	display: block
+
+
+.toggle-mnu span,
+.toggle-mnu span:after,
+.toggle-mnu span:before 
+	width: 100%
+	height: 2px
+	background-color: #fff
+	transition: all 0.3s
+	backface-visibility: hidden
+	border-radius: 2px
+
+
+.toggle-mnu.on span 
+	background-color: transparent
+
+.toggle-mnu.on span:before 
+	transform: rotate(45deg) translate(5px, 5px)
+
+.toggle-mnu.on span:after 
+	transform: rotate(-45deg) translate(7px, -8px)
+
+.toggle-mnu.on + #menu 
+	opacity: 1
+	visibility: visible
 
 
