--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,6 +12,9 @@
 		background-color: #1c242c
 		font-size: em(20px)
 		margin-top: 10px
+		position: absolute
+		right: 15px
+		z-index: 10
 		ul
 			li
 				display: block
@@ -32,7 +35,12 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+	.main-mnu
+		top: 35px
+	.header-wrap
+		margin-top: 0	
+		h1
+			margin-top: 0
 
 
 /* Small Devices, Tablets */
