--- a/sass/header.sass
+++ b/sass/header.sass
@@ -21,7 +21,7 @@ a, a:hover, a:focus, a:active
 	color: $main-color
 
 .headers
-	font-famyly: "PFCentroSlabProMedium", $helvetica
+	font-family: "PFCentroSlabProMedium", $helvetica
 	text-transform: uppercase
 	font-weight: normal
 
@@ -62,13 +62,15 @@ b, strong
 	background-size: cover
 	background-position: center
 	position: relative
+	padding-bottom: 160px
 
 	&::before
 		@extend .before
 		background-color: #394b5f
 		opacity: .85
 	h1
-		text-tranform:none			
+		text-tranform: none
+		line-height: em(17px)			
 
 .top-line
 	min-height: 160px
@@ -168,5 +170,118 @@ b, strong
 .toggle-mnu.on + #menu 
 	opacity: 1
 	visibility: visible
+
+.header-wrap
+	margin-top: 40px
+	h1
+		margin-top: 120px
+		color: #fff
+		text-transform: none
+		border-bottom: $main-color 8px solid
+		display: inline-block
+		padding-bottom: 10px
+	ul
+		@extend .ulmnu
+		margin-top: 15px
+		li
+			display: block
+			font-family: "RalewaySemiBold", $helvetica
+			font-size: em(18px)
+			line-height: 32px
+			position: relative
+			padding-left: 16px
+			&::before
+				content: ""
+				display: block
+				width: 6px
+				height: 11px
+				+triangle(12px, $main-color, right);
+				position: absolute
+				top: 10px
+				left: 0
+			a
+				text-decoration: none
+				color: #fff
+				
+				&:hover
+					text-decoration: underline
+
+.header-left
+	margin-bottom: 50px
+
+.forms
+	background-color: transparentize(#243343, .2)
+	padding: 35px 35px 25px
+	color: #97a4b2
+	font-size: em(14px)
+	border-bottom: #1a222b 3px solid
+	h4
+		color: #fff
+		font-family: "PFCentroSlabProMedium", $helvetica
+		font-size: em(34px)
+		text-transform: none
+		margin: 0
+	p
+		line-height: 22px
+		margin-top: 15px
+	label 
+		margin-top: 20px
+		margin-bottom: 20px
+		display: block
+	span
+		letter-spacing: 1.6px
+		display: block
+		margin-bottom: 4px
+		color: #778390	
+	input
+		display: block
+		width: 100%
+		border: none
+		box-shadow: 0 -4px #1f2a46
+		background-color: #34465A
+		text-indent: 10px
+		font-size: em(20px)
+		padding: 10px 0 
+		transition: all .5s ease
+
+		&:focus
+			box-shadow: 0 -6px #1f2a46
+			background-color: #394e65
+	.buttons
+		margin-top: 10px		
+.button-wrap
+	text-align: center
+.buttons
+	display: inline-block
+	border: none
+	background-color: $main-color
+	color: #111
+	font-family: "PFCentroSlabProBold", $helvetica
+	font-weight: bold
+	font-size: em(20px)
+	padding: 12px 30px
+	border-bottom: #b97200 3px solid
+	transition: all .5s ease
+	&:hover
+		background-color: #ffb338 
+	&:active
+		background-color: #db8c0e	
+
+.arrow_botoom
+	display: inline-block
+	width: 40px
+	height: 40px
+	background-image: url(../img/arrow_down.png)
+	position: relative
+	z-index: 5
+	cursor: pointer
+	top: 50px
+	opacity: .7
+	transition: all .25s ease
+	&:hover
+		opacity: 1
+    
+
+
 
 
