--- a/sass/header.sass
+++ b/sass/header.sass
@@ -27,6 +27,7 @@ a, a:hover, a:focus, a:active
 
 h1, h2, h3, h4, h5, h6
 	@extend .headers
+	line-height: em(22px)
 
 h1
 	font-size: em(48px)
@@ -38,7 +39,7 @@ h2
 	font-size: em(24px)
 
 b, strong
-	font-famyly: "RalewayBold", $helvetica
+	font-family: "RalewayBold", $helvetica
 
 .before
 	content: ""
@@ -262,10 +263,18 @@ b, strong
 	padding: 12px 30px
 	border-bottom: #b97200 3px solid
 	transition: all .5s ease
+	text-decoration: none
 	&:hover
 		background-color: #ffb338 
+		text-decoration: none
+		color:#111
 	&:active
 		background-color: #db8c0e	
+		text-decoration: none
+		color:#111
+	&:focus
+		color: #111
+		text-decoration: none	
 
 .arrow_botoom
 	display: inline-block
