--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,6 +1,8 @@
 @import "bourbon"
 @import "vars.sass"
 
+$main-color: #f39f18
+$headers-color: #2c3949
 //Load Libs SASS
 @import "app/libs/animate/animate.sass"
 
@@ -27,8 +29,40 @@ body input:required:valid,
 body textarea:required:valid
 	color: #fff
 
-//Custom Styles Here
+.homesect
+	padding-top: 70px
+	background-color: #f9f9f9
+	position: relative
+	.section-head
+		margin-bottom: 80px
+		p
+			margin-top: 60px
+		h2
+			text-align: center
+			position: relative
+			&::after
+				position: absolute
+				content: ''
+				height: 4px
+				background-color: $main-color
+				width: 165px
+				display: block
+				bottom: -30px
+				left: 50%
+				transform: translate(-50%,0)
 
+	.section-bottom	
+		margin-top: 70px
+		background-color: #e5e5e5	
+		padding: 50px 0
+		text-align: center
+	&::before
+		content: ''
+		height: 6px
+		position: absolute
+		top: -6px
+		width: 100%
+		background-image: url("../img/bah_1.png")		
 
 //ALWAYS END
 @import "media"
